spacing corrections, css improvements

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --color-dark-100: #86868b;
   --color-dark-200: #2e2e30;
   --color-light-100: #adb5bd;
+  --color-beige: #fff7ed;
 }
 
 html {
@@ -20,7 +21,7 @@ html {
 body {
   width: 100vw;
   overflow-x: hidden;
-  background-color: #fff7ed;
+  background-color: var(--color-beige);
   color: var(--color-dark-100);
   font-family: var(--font-semibold);
   padding: 2em;
@@ -80,31 +81,13 @@ body {
       }
     }
   }
+.photo-right {
+  @apply w-full lg:w-1/2 ms-5 mr-20 flex justify-center
+}
 
-  @layer components {
-    header {
-      @apply w-screen fixed top-0 left-0 z-50 flex-center bg-orange-200 min-h-[7vh];
-
-      nav {
-        @apply container mx-auto flex-between px-5 2xl:px-0;
-
-        img {
-          @apply cursor-pointer hover:-translate-y-0.5 transition-all duration-300 ease-in-out;
-
-          button {
-            @apply bg-transparent border-none outline-none cursor-pointer;
-          }
-        }
-
-        ul {
-          @apply flex-center gap-8;
-
-          a {
-            @apply hidden md:block text-white opacity-80 font-regular text-sm cursor-pointer hover:opacity-100 transition-all duration-300 ease-in-out;
-          }
-        }
-      }
-
+  .photo-left {
+    @apply w-full lg:w-1/2 ms-5 mr-20 flex justify-center flex justify-center
+  }
       .logo {
         @apply h-24 w-24 rounded-[25%] transition-all duration-300 ease-in-out m-4;
       }
@@ -118,44 +101,48 @@ body {
       }
 
       .navBarIcon {
-        @apply h-8 w-8;
+        @apply h-8 w-8 hover:scale-110 transition-all;
       }
+
     }
     .title {
         @apply text-3xl font-bold text-red-800 m-10 flex justify-start shadow-[0_2px_rgba(188,143,143,0.9)]
     }
     .description {
-      @apply my-5;
+      @apply text-2xl font-bold text-black m-5 text-wrap md:wrap-break-word;
+    }
+    .sub-description {
+      @apply text-2xl font-bold text-black text-wrap md:wrap-break-word;
+    }
+    button {
+      @apply relative z-10 bg-primary text-white py-2 px-6 mt-10 lg:mt-10 mb-5 rounded-full font-semibold text-lg cursor-pointer border-2 border-primary
+      transition-all duration-300 ease-in-out hover:bg-[#e0bb7e] hover:text-black hover:border-[#841c21] transition-all duration-300 ease-in-out;
     }
 
       #hero {
-      @apply h-fit lg:h-[80vh] col-center mt-40 lg:mt-20 2xl:mt-[7vh];
+        @apply w-full flex flex-col justify-center items-center text-center;
 
-      div {
-        @apply relative z-10 col-center lg:translate-y-16;
+        div {
+          @apply relative z-10 col-center lg:translate-y-16;
 
-        h1 {
-          @apply font-semibold lg:text-3xl 2xl:text-5xl text-white;
+          h1 {
+            @apply font-semibold lg:text-3xl 2xl:text-5xl text-white;
+          }
+
+          img {
+            @apply container mx-auto w-2/3;
+          }
         }
-
-        img {
-          @apply container mx-auto w-2/3;
-        }
-      }
 
       video {
         @apply m-auto lg:translate-y-5 2xl:translate-y-0 w-3/4 md:w-2/3 lg:w-1/2;
-      }
-
-      button {
-        @apply relative z-10 bg-primary text-white py-2 px-6 mt-10 lg:mt-10 mb-5 rounded-full font-semibold text-lg cursor-pointer hover:bg-[#a68844] hover:text-black transition-all duration-300 ease-in-out;
       }
 
       p {
         @apply lg:h3-semibold base-semibold;
       }
     }
-  }
+
   #showcase {
     @apply relative lg:overflow-hidden my-20 max-h-3/4;
 
@@ -184,26 +171,29 @@ body {
       @apply text-red-950 cursor-pointer transition-all duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-110;
     }
   }
-  }
+
 
 /* contact section */
 .contact-container {
   @apply max-w-xl relative z-10 sm:px-10 px-5 mt-12;
 }
-
+.mini-title {
+  @apply text-2xl font-bold text-red-800 m-10;
+}
 .field-label {
-  @apply text-lg text-white-600;
+  @apply text-lg text-red-800;
 }
 
 .field-input {
-  @apply w-full bg-black-300 px-5 py-2 min-h-14 rounded-lg placeholder:text-white text-lg text-white shadow-black-200 shadow-2xl focus:outline-none;
+  @apply w-full bg-beige px-5 py-2 min-h-14 rounded-lg placeholder:text-dark-100 text-lg text-red-800 shadow-2xl focus:outline-none;
 }
 
 .field-btn {
-  @apply bg-black-500 px-5 py-2 min-h-12 rounded-lg shadow-black-200 shadow-2xl flex justify-center items-center text-lg text-white gap-3 hover:bg-red-800 hover:text-white transition-all duration-300;
+  @apply bg-black px-5 py-2 min-h-12 rounded-lg shadow-2xl flex justify-center items-center text-lg text-red-800 gap-3 hover:bg-red-800 hover:text-white transition-all duration-300;
 }
 
 
 .field-btn_arrow {
   @apply w-2.5 h-2.5 object-contain invert brightness-0;
 }
+
